--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,21 +7,13 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Cache Ruby dependencies
-      uses: actions/cache@v2.1.2
-      with:
-        path: vendor/bundle
-        key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-gems-
+    - uses: actions/checkout@v4
 
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
+      with:
+        bundler-cache: true
 
-    - name: Install Ruby dependencies
-      run: bundle install
     - name: Build site
       run: bundle exec jekyll build
 
